--- a/.github/workflows/staging.workflow.yml
+++ b/.github/workflows/staging.workflow.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Login to Heroku Container registry
